<resources>
    <string name="app_name">Blood Bank</string>

    <string-array name="blood_arrays">
        <item>A+</item>
        <item>B+</item>
        <item>A-</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string name="title_activity_google_map">Map</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="etEmail">ادخل  البريد الالكتروني</string>
    <string name="etPassword">ادخل الرقم السري</string>
    <string name="Login">تسجيل الدخول</string>
    <string name="tvRegister">انشاء حساب جديد</string>
    <string name="title_activity_home_admin">HomeAdmin</string>
    <string name="etpaas2">تأكيد الرقم السري</string>
    <string name="Register">حفظ</string>
    <string name="patient">طلب دم</string>
    <string name="dooner">متبرع بالدم</string>
    <string name="name_dooner">اسم المتبرع</string>
    <string name="age_dooner">العمر</string>
    <string name="gender_dooner">الجنس</string>
    <string name="blood_group">فصيلة الدم</string>
    <string name="address">العنوان</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city">المدينه</string>
</resources>
