<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:orientation="vertical"
    android:padding="8dp"
    app:cardBackgroundColor="@color/White"
    app:cardCornerRadius="6dp">

    <RelativeLayout
        android:id="@+id/relativeId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">



        <TextView
            android:id="@+id/tvNameDooner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:maxLines="1"
            android:text="@string/name_dooner"
            android:textColor="@color/secondary"
            android:textSize="16sp"

            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/tvAgeDooner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNameDooner"
            android:text="@string/age_dooner"
            android:textColor="@color/secondary"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_marginStart="10dp"
            android:id="@+id/tvBloodGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAgeDooner"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/blood_group"
            android:textColor="@color/secondary"
            android:textSize="14sp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:layout_marginStart="10dp"
            android:id="@+id/tvcity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBloodGroup"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/city"
            android:textColor="@color/secondary"
            android:textSize="14sp"
            android:layout_marginLeft="10dp" />


    </RelativeLayout>


</android.support.v7.widget.CardView>